# Logic for handling AgentService gRPC requests

def agent_logic(
    file: str = "",
    fileType: str = "",
    teacherId: str = "",
    role: str = "",
    message: str = "",
    createdAt: str = "",
    updatedAt: str = ""
):
    # TODO: Implement actual agent logic here
    # For now, return a dummy response
    return {
        "message": "Agent logic not implemented.",
        "teacherId": teacherId,
        "agentName": "root_agent",
        "agentResponse": "{}",
        "sessionId": "",
        "createdAt": createdAt,
        "updatedAt": updatedAt,
        "responseTime": "",
        "role": role,
        "feedback": None
    }
